--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fakingjs",
-  "version": "0.0.1-beta.1",
+  "version": "0.1.0",
   "description": "伪造数据",
   "author": "ruihuag",
   "license": "MIT",
