--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "prepare": "husky install",
     "commitlint": "commitlint -e",
-    "build": "npx rollup -c --extend rollup.config.ts",
+    "build": "npx rollup -c ./config/rollup.build.ts",
     "tsprod": "npm run build && npm run start",
     "dev": "ts-node-dev --respawn --transpile-only ./__test__/index.ts",
     "test": "ts-node-dev --respawn --transpile-only ./__test__/index.ts",
@@ -45,37 +45,34 @@
     "fakeryjs"
   ],
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@types/bluebird": "^3.5.36",
-    "@types/node": "^16.11.6",
-    "@types/webpack-env": "^1.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "abandonjs": "^2.2.0",
-    "commitlint": "^17.2.0",
-    "eslint": "^8.7.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^8.0.2",
-    "lint-staged": "^12.0.3",
+    "@babel/core": "^7.20.5",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^23.0.5",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@swc/core": "^1.3.23",
+    "@swc/wasm": "^1.3.23",
+    "@types/node": "^18.11.2",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "abandonjs": "^2.4.1",
+    "check-it-type": "0.1.4",
+    "eslint": "^8.25.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "jest": "^29.2.1",
     "lorem-ipsum": "^2.0.8",
-    "node-notifier": "^8.0.2",
-    "prettier": "^2.4.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.66.1",
-    "rollup-plugin-babel": "^4.4.0",
+    "node-notifier": "^10.0.1",
+    "prettier": "^2.7.1",
+    "rollup": "^2.79.1",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.1",
-    "ts-node": "^10.4.0",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
-    "ts-toolbelt": "^9.6.0",
-    "typescript": "^4.4.4",
-    "unit-testing-js": "^0.2.0"
+    "typescript": "^4.8.4",
+    "unit-testing-js": "0.3.3"
   }
 }
