--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["./src/**/*", "*.d.ts"],
-  "exclude": ["./src/test", "**/*/__test__/", "**/*/md.ts", "**/*/*.md", "*.spec.ts"]
+  "include": ["./src/**/*", "*.d.ts", "node_modules/**/*.d.ts"],
+  "exclude": ["./src/test", "**/*/__test__/", "**/*/md.ts", "**/*/*.md", "**/*.spec.d.ts"]
 }
